--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                                     </tr>
                                     <tr>
                                         <td class="tbl_row_data" colspan="2" align="left">
-                                            <input type="image" name="ctl00$ContentPlaceHolder1$imgGoogle" id="ctl00_ContentPlaceHolder1_imgGoogle" src="/common/resources/shared/images//sso/open_source_google.gif" align="absmiddle" onclick="window.open(&#39;/gateway/sso/OpenSourceApproval.aspx?authType=ga&amp;ReturnUrl=%2f&#39;,&#39;_self&#39;,&#39;&#39;); return false;"/>
+                                            <input type="image" name="ctl00$ContentPlaceHolder1$imgGoogle" id="ctl00_ContentPlaceHolder1_imgGoogle" src="https://www.yorkacademy.com/common/resources/shared/images//sso/open_source_google.gif" align="absmiddle" onclick="window.open(&#39;/gateway/sso/OpenSourceApproval.aspx?authType=ga&amp;ReturnUrl=%2f&#39;,&#39;_self&#39;,&#39;&#39;); return false;"/>
                                             <div id="ctl00_ContentPlaceHolder1_pnlGoogleApps" style="display: none; background-color: WhiteSmoke">
                                                 <table border="0" cellpadding="4" cellspacing="0">
                                                     <tr>
