--- a/index.html
+++ b/index.html
@@ -170,9 +170,7 @@
                                 <br></br>
                                 <span>
                                     <i class="fa fa-envelope" aria-hidden="true" style="padding-right: 5px;"></i>
-                                    <a href="/cdn-cgi/l/email-protection#147d7a727b546d7b667f756677673a7b6673" style="color: #ffffff">
-                                        Email: <span class="__cf_email__" data-cfemail="3851565e577841574a53594a5b4b16574a5f">[email &#160;protected]</span>
-                                    </a>
+                                    Email: info@yorkarcs.org
                                 </span>
                             </div>
                         </div>
@@ -354,12 +352,7 @@
                                 <br></br>
                                 <span>Upper School: 2 Hamilton Avenue | York, PA 17401 | (717) 900-5001</span>
                                 <br></br>
-                                <span>
-                                    <a href="/cdn-cgi/l/email-protection#e48d8a828ba49d8b968f85968797ca8b9683" style="color: #ffffff">
-                                        Email: <span class="__cf_email__" data-cfemail="c2abaca4ad82bbadb0a9a3b0a1b1ecadb0a5">[email &#160;protected]</span>
-                                    </a>
-                                    | Fax: (717) 718-1092
-                                </span>
+                                <span>Email: info@yorkarcs.org | Fax: (717) 718-1092</span>
                             </div>
                         </div>
                         <div id="footer-right" class="w-25">
