--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link type="text/css" rel="stylesheet" media="screen" href="https://cdnsm4-ss16.sharpschool.com/Common/resources/DesignPortfolio/SiteThemes/fiesta/fix.css"/>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
         <link href="https://cdnsm2-ss16.sharpschool.com/App_Themes/default/merged.css" type="text/css" rel="stylesheet"/>
-        <link id="ctl00_23000f75b4852b77c75edc3b5d4a4525cd13244afaa938183793c27d8c4edae3" href="/common/pages/PortalThemeStyle.ashx?templateId=1818" rel="stylesheet" type="text/css" media="all"/>
+        <link id="ctl00_23000f75b4852b77c75edc3b5d4a4525cd13244afaa938183793c27d8c4edae3" href="https://yorkacademy.com/common/pages/PortalThemeStyle.ashx?templateId=1818" rel="stylesheet" type="text/css" media="all"/>
     </head>
     <body id="ctl00_PageBody" style="margin: 0px">
         <div id="mobile_banner"></div>
