--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                             div.Main .Signup .SignupButtons .DivGeneralSignupButton {
                                 background-position: center;
                                 background-repeat: no-repeat;
-                                background-image: url(/common/resources/shared/images/ParentPortal/Login-02.jpg);
+                                background-image: url(https://yorkacademy.com/common/resources/shared/images/ParentPortal/Login-02.jpg);
                                 padding: 10px;
                                 /*margin-top:20%;*/
                                 text-align: center;
@@ -263,7 +263,7 @@
                             div.Main .Signup .SignupButtons .DivParentSignupButton {
                                 background-position: center;
                                 background-repeat: no-repeat;
-                                background-image: url(/common/resources/shared/images/ParentPortal/Login-03.jpg);
+                                background-image: url(https://yorkacademy.com/common/resources/shared/images/ParentPortal/Login-03.jpg);
                                 padding: 10px;
                                 /*margin-bottom:20%;*/
                                 text-align: center;
