--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                             div.Main .Signup .SignupButtons .DivGeneralSignupButton {
                                 background-position: center;
                                 background-repeat: no-repeat;
-                                background-image: url(https://yorkacademy.com/common/resources/shared/images/ParentPortal/Login-02.jpg);
+                                background-image: url(/images/Login-02.jpg);
                                 padding: 10px;
                                 /*margin-top:20%;*/
                                 text-align: center;
@@ -263,7 +263,7 @@
                             div.Main .Signup .SignupButtons .DivParentSignupButton {
                                 background-position: center;
                                 background-repeat: no-repeat;
-                                background-image: url(https://yorkacademy.com/common/resources/shared/images/ParentPortal/Login-03.jpg);
+                                background-image: url(/images/Login-03.jpg);
                                 padding: 10px;
                                 /*margin-bottom:20%;*/
                                 text-align: center;
@@ -328,7 +328,7 @@
                                                             <span id="ctl00_ContentPlaceHolder1_lblHead" style="font-weight:bold;">Log in using Google Apps Account</span>
                                                         </td>
                                                         <td align="right">
-                                                            <input type="image" name="ctl00$ContentPlaceHolder1$ibCancel" id="ctl00_ContentPlaceHolder1_ibCancel" src="/common/resources/shared/images//portal/default_theme/buttonDelete.gif" align="absmiddle"/>
+                                                            <input type="image" name="ctl00$ContentPlaceHolder1$ibCancel" id="ctl00_ContentPlaceHolder1_ibCancel" src="https://www.yorkacademy.com/common/resources/shared/images//portal/default_theme/buttonDelete.gif" align="absmiddle"/>
                                                         </td>
                                                     </tr>
                                                     <tr>
