--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                             div.Main .Signup .SignupButtons .DivGeneralSignupButton {
                                 background-position: center;
                                 background-repeat: no-repeat;
-                                background-image: url(/images/Login-02.jpg);
+                                background-image: url(../images/Login-02.jpg);
                                 padding: 10px;
                                 /*margin-top:20%;*/
                                 text-align: center;
@@ -272,7 +272,7 @@
                             div.Main .Signup .SignupButtons .DivParentSignupButton {
                                 background-position: center;
                                 background-repeat: no-repeat;
-                                background-image: url(/images/Login-03.jpg);
+                                background-image: url(../images/Login-03.jpg);
                                 padding: 10px;
                                 /*margin-bottom:20%;*/
                                 text-align: center;
