--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
                 border-width: thin !important;
             }
         </style>
+        <script id="ctl00_00f77616769f0d4f891b41dfda94e8b04f53f1c11d0172b581e651aeac6863a9" src="https://cdnsm1-ss16.sharpschool.com/bundle/js/vendor.cfcd208495d565ef66e7dff9f98764da.js" type="text/javascript"></script>
         <link id="ctl00_c8f4c6c953812b601a957ffb85881e061f80eb01e5e8c670167b133b4d5e4bbf" href="https://cdnsm1-ss16.sharpschool.com/bundle/css/vendor.cfcd208495d565ef66e7dff9f98764da.css" rel="stylesheet" type="text/css" media="all"/>
+        <script src="https://cdnsm4-ss16.sharpschool.com/common/resources/DesignPortfolio/SiteThemes/CommonLib/scripts/url-script-v3.js" type="text/javascript"></script>
+        <script src="https://cdnsm4-ss16.sharpschool.com/common/resources/DesignPortfolio/SiteThemes/CommonLib/login/login.js" type="text/javascript"></script>
         <link type="text/css" rel="stylesheet" media="screen" href="https://cdnsm4-ss16.sharpschool.com/common/resources/DesignPortfolio/SiteThemes/CommonLib/login/login.css"/>
         <meta id="viewport" name="viewport" content="width=320, initial-scale=1, maximum-scale=1, user-scalable=no"/>
         <link type="text/css" rel="stylesheet" media="screen" href="https://cdnsm4-ss16.sharpschool.com/Common/resources/DesignPortfolio/SiteThemes/fiesta/fix.css"/>
+        <script src="https://cdnsm4-ss16.sharpschool.com/Common/resources/DesignPortfolio/SiteThemes/fiesta/fix.js" type="text/javascript"></script>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
+        <script id="ctl00_d811866f2347c45bd3a0fe77a237af6a60765b254d2e04324bf23e6319644c76" src="https://cdnsm2-ss16.sharpschool.com/common/JavaScript/resourcelibrary/ReactPortlets/reactPortletLoader.js" type="text/javascript"></script>
+        <script id="ctl00_007e1919cd42cdd5583cdcdfaf4437f725a9db464eba46f47def4954760764c0" src="https://cdnsm2-ss16.sharpschool.com/common/JavaScript/resourcelibrary/ReactPortletsInit.js" type="text/javascript"></script>
         <link href="https://cdnsm2-ss16.sharpschool.com/App_Themes/default/merged.css" type="text/css" rel="stylesheet"/>
         <link id="ctl00_23000f75b4852b77c75edc3b5d4a4525cd13244afaa938183793c27d8c4edae3" href="https://yorkacademy.com/common/pages/PortalThemeStyle.ashx?templateId=1818" rel="stylesheet" type="text/css" media="all"/>
     </head>
