--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                                     <tr>
                                         <td class="tbl_row_text"></td>
                                         <td class="tbl_row_data">
-                                            <input type="submit" name="ctl00$ContentPlaceHolder1$btnLogin" value="Login" onclick="javascript:WebForm_DoPostBackWithOptions(new WebForm_PostBackOptions(&quot;ctl00$ContentPlaceHolder1$btnLogin&quot;, &quot;&quot;, true, &quot;&quot;, &quot;&quot;, false, false))" id="ctl00_ContentPlaceHolder1_btnLogin" class="loginBtn button" class="button" onmouseover="javascript:this.style.borderColor=&#39;#b1cfff #99b7d7 #3677cb #d3e3fb&#39;;" onmouseout="javascript:this.style.borderColor=&#39;#c4cccc #acb5b5 #6f7777 #acb5b5&#39;;" onfocus="javascript:this.style.borderColor=&#39;#b1cfff #99b7d7 #3677cb #d3e3fb&#39;;" onblur="javascript:this.style.borderColor=&#39;#c4cccc #acb5b5 #6f7777 #acb5b5&#39;;"/>
+                                            <input type="submit" name="ctl00$ContentPlaceHolder1$btnLogin" value="Login" id="ctl00_ContentPlaceHolder1_btnLogin" class="loginBtn button" class="button" onmouseover="javascript:this.style.borderColor=&#39;#b1cfff #99b7d7 #3677cb #d3e3fb&#39;;" onmouseout="javascript:this.style.borderColor=&#39;#c4cccc #acb5b5 #6f7777 #acb5b5&#39;;" onfocus="javascript:this.style.borderColor=&#39;#b1cfff #99b7d7 #3677cb #d3e3fb&#39;;" onblur="javascript:this.style.borderColor=&#39;#c4cccc #acb5b5 #6f7777 #acb5b5&#39;;"/>
                                         </td>
                                     </tr>
                                 </table>
